[package]
name = "mqtt-publish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex-mqtt = "0.8.7"

ntex = { version = "0.5", features = ["tokio", "rustls", "openssl"] }
env_logger = "0.9.0"
log = "0.4.17"
openssl = "0.10"

byte_string = "1.0.0"